--- a/about.html
+++ b/about.html
@@ -160,8 +160,8 @@
                                 <div class="fca-title text-center rounded-bottom p-4">
                                     <div class="fca-title-inner">
                                         <h4 class="mt-3">Dr. Ponnusamy V</h4>
-                                        <p class="mb-0">Faculty Club Advisor</p>
-                                        <p class="mt-3">"Our goal is to provide exceptional guidance and support to our students.""Our goal is to provide exceptional guidance and support to our students.""Our goal is to provide exceptional guidance and support to our students."</p>
+                                        <p class="mb-0" >Faculty Club Advisor</p>
+                                        <p class="mt-3" style="color: black;">QUANTuMIT is an exceptional platform for delving into the world of quantum mechanics, where students gain a rigorous foundation in quantum principles and join a community passionate about exploring this transformative field.</p>
                                     </div>
                                 </div>
                             </div>
@@ -176,8 +176,8 @@
                                 <div class="fca-title text-center rounded-bottom p-4">
                                     <div class="fca-title-inner">
                                         <h4 class="mt-3">Dr. Chithra S</h4>
-                                        <p class="mb-0">Faculty Club Advisor</p>
-                                        <p class="mt-3">"We strive to inspire and nurture the next generation of leaders."We strive to inspire and nurture the next generation of leaders.We strive to inspire and nurture the next generation of leaders.</p>
+                                        <p class="mb-0" >Faculty Club Advisor</p>
+                                        <p class="mt-3" style="color: black;">In QUANTuMIT, students embark on a journey into quantum mechanics and computing, exploring core principles, algorithmic challenges, and simulation techniques that open up new possibilities in the quantum realm.</p>
                                     </div>
                                 </div>
                             </div>
